kustomization/base/api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nvideo-api
  labels:
    needs-pull-secret: private
spec:
  selector:
    matchLabels:
      app: nvideo-api
  replicas: 1
  template:
    metadata:
      labels:
        app: nvideo-api
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/metrics"
        prometheus.io/port: "8000"
    spec:
      nodeSelector:
        nvideo-server: "true"
      containers:
      - name: nvideo-api
        image: nvideo-api-image-name-placeholder # kustomize
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
          name: api
        resources:
          requests:
            memory: 128Mi
      imagePullSecrets:
      - name: registry-secret-name-placeholder # kustomize
