kustomization/base/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nvideo-api-svc
spec:
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
    name: api
  selector:
    app: nvideo-api
