kustomization/base/api/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nvideo-api-httproute
  labels:
    nvideo/route-for: api
spec:
  parentRefs:
    - name: gateway-name-placeholder # kustomize GATEWAY_NAME
      namespace: gateway-namespace-placeholder # kustomize GATEWAY_NAMESPACE
  hostnames:
    - gateway-host-placeholder # kustomize GATEWAY_HOST_API
  rules:
    - backendRefs:
        - name: nvideo-api-svc
          kind: Service
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /placeholder # kustomize GATEWAY_PATH_API
